--- a/book-list-builder/package.json
+++ b/book-list-builder/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/damonpickett/react-booklistbuilder",
+  "homepage": "https://damonpickett.github.io/damonpickett/react-booklistbuilder",
   "name": "book-list-builder",
   "version": "0.1.0",
   "private": true,
